dark mode button fix?

--- a/styles/style.css
+++ b/styles/style.css
@@ -242,11 +242,13 @@ body.dark .mode .sun-moon i.sun {
     margin-left: auto;
     display: flex;
     justify-content: center;
+    /* height: 100%; */
 }
 
 .toggle-switch .switch {
     position: relative;
     width: 40px;
+    height: 22px;
     border-radius: 25px;
     background-color: var(--toggle-color);
     transition: var(--tran-05);
